example/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    deployment: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: adapter-port
      name: service-port
    - protocol: TCP
      port: 8081
      targetPort: application-port
      name: service-port
